--- a/Frontend/Shared/MessageBubble.razor
+++ b/Frontend/Shared/MessageBubble.razor
@@ -7,14 +7,14 @@
             <SpaceItem>
                 <Avatar Icon="user" Size="2.5rem"/>
             </SpaceItem>
-    
+
             <SpaceItem>
-                <div class="bubble">
-                    <p style="font-size: 1.1rem">
+                <p style="font-size: 0.8rem; color: rgb(128,128,128)">
+                    @Message.Sender
+                </p>
+                <div class="bubble-left">
+                    <p class="message-text">
                         @Message.Text
-                    </p>
-                    <p style="font-size: 0.8rem; color: rgb(128,128,128)">
-                        @Message.Sender
                     </p>
                 </div>
             </SpaceItem>
@@ -24,16 +24,18 @@
     {
         <Space Align="start">
             <SpaceItem>
-                <div class="bubble">
-                    <p style="font-size: 1.1rem; align-self: flex-end">
-                        @Message.Text
-                    </p>
-                    <p style="font-size: 0.8rem; align-self: flex-end; color: rgb(128, 128, 128)">
+                <div>
+                    <p style="font-size: 0.8rem; color: rgb(128, 128, 128); text-align: right;">
                         @Message.Sender
                     </p>
+                    <div class="bubble-right">
+                        <p class="message-text">
+                            @Message.Text
+                        </p>
+                    </div>
                 </div>
             </SpaceItem>
-            
+
             <SpaceItem>
                 <Avatar Icon="user" Size="2.5rem"/>
             </SpaceItem>
@@ -50,4 +52,5 @@
         Sender = "default",
         Text = "default"
     };
+
 }
