--- a/Frontend/Shared/MessageBubble.razor.css
+++ b/Frontend/Shared/MessageBubble.razor.css
@@ -1,8 +1,24 @@
-.bubble {
+.bubble-left {
     background-color: white;
-    border-radius: 10px;
+    border-radius: 1px 10px 10px 10px;
     padding: 5px;
-    display: flex;
-    flex-direction: column;
     min-width: 80px;
+    max-width: 300px;
+    width: fit-content;
+    justify-content: center;
+}
+
+.bubble-right {
+    background-color: white;
+    border-radius: 10px 1px 10px 10px;
+    padding: 5px;
+    max-width: 300px;
+    width: fit-content;
+    justify-content: center;
+}
+
+.message-text {
+    font-size: 1.1rem;
+    margin: 3px;
+    word-break: break-word;
 }
