--- a/Frontend/Shared/MainLayout.razor
+++ b/Frontend/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
             <Space >
                 <SpaceItem>
                     <p class="title-text">
-                        自律型可重编程客服机器人
+                        试作自律型可重编程客服机器人
                     </p>
                 </SpaceItem>
                 
