--- a/Frontend/Pages/_Host.cshtml
+++ b/Frontend/Pages/_Host.cshtml
@@ -27,7 +27,10 @@
     <a class="dismiss">🗙</a>
 </div>
 
-<script src="_framework/blazor.server.js"></script>
 <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
+<script src="_content/BlazorMonaco/jsInterop.js"></script>
+<script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
+<script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
+<script src="_framework/blazor.server.js"></script>
 </body>
 </html>
