--- a/Frontend/_Imports.razor
+++ b/Frontend/_Imports.razor
@@ -2,5 +2,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using AntDesign
+@using BlazorMonaco
+@using BlazorMonaco.Editor
+@using BlazorMonaco.Languages
 @using Frontend
 @using Frontend.Shared
