--- a/Frontend/Shared/MainLayout.razor
+++ b/Frontend/Shared/MainLayout.razor
@@ -9,11 +9,17 @@
                         试作自律型可重编程客服机器人
                     </p>
                 </SpaceItem>
-                
+
                 <SpaceItem>
                     <p class="subtitle-text">
                         a.k.a 凯瑟琳
                     </p>
+                </SpaceItem>
+
+                <SpaceItem>
+                    <div>
+                        <a href="editor/">维护界面</a>
+                    </div>
                 </SpaceItem>
             </Space>
         </Header>
