add: 美化头像和设置用户名称过程

--- a/Frontend/Pages/Index.razor
+++ b/Frontend/Pages/Index.razor
@@ -5,7 +5,7 @@
 
 
 <Layout>
-    <Sider Width="200" Theme="SiderTheme.Light">
+    <Sider Width="200">
         <div class="chat-control-zone">
             <div>
                 <Button Type="@ButtonType.Primary" Size="large" @onclick="@CreateChatClicked">
