--- a/Frontend/Pages/_Host.cshtml
+++ b/Frontend/Pages/_Host.cshtml
@@ -32,5 +32,6 @@
 <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
 <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
 <script src="_framework/blazor.server.js"></script>
+<script src="js/helper.js"></script>
 </body>
 </html>
