--- a/Frontend/_Imports.razor
+++ b/Frontend/_Imports.razor
@@ -1,5 +1,8 @@
-﻿@using Microsoft.AspNetCore.Components.Routing
+﻿@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using AntDesign
 @using BlazorMonaco
