--- a/Frontend/Pages/Editor.razor
+++ b/Frontend/Pages/Editor.razor
@@ -28,8 +28,8 @@
 
             <div class="logging-zone">
                 <AntList TItem="@string" DataSource="@_logs" Split="@false" @ref="@_logList">
-                    <ListItem class="logging-item">
-                        <p>@context</p>
+                    <ListItem Style="padding: 0 0 0">
+                        <p class="logging-item">@context</p>
                     </ListItem>
                 </AntList>
             </div>
