refact: 抽象出IChatRobotFactory接口

--- a/Frontend/Pages/Index.razor
+++ b/Frontend/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using Frontend.Models
-@using Katheryne.Services
-@inject KatheryneChatRobotFactory ChatRobotFactory
+@using Katheryne.Abstractions
+@inject IChatRobotFactory ChatRobotFactory
 
 
 <Layout>
