--- a/Frontend/Shared/ChatZone.razor
+++ b/Frontend/Shared/ChatZone.razor
@@ -127,6 +127,6 @@
 
     private void SetUsernameCancelClicked()
     {
-        _setUsernameVisible = false;
+        MessageService.Warning("呃呃呃呃，没设置用户名就想走？");
     }
 }
