add: 完善帮助文件

--- a/Frontend/Pages/_Host.cshtml
+++ b/Frontend/Pages/_Host.cshtml
@@ -8,6 +8,7 @@
 <head>
     <meta charset="utf-8"/>
     <base href="~/"/>
+    <title>试作自律型可重编程客服机器人</title>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <link href="Frontend.styles.css" rel="stylesheet">
